--- a/Todo/_Vs/TodoList_V.xaml
+++ b/Todo/_Vs/TodoList_V.xaml
@@ -5,7 +5,10 @@
              mc:Ignorable="d" d:DesignWidth="200" d:DesignHeight="400"
              x:Class="Todo._Vs.TodoList_V">
   <DockPanel>
-    <Button DockPanel.Dock="Bottom">Add an item</Button>
+    <Button DockPanel.Dock="Bottom"
+            Command="{Binding $parent[Window].DataContext.AddItem}">
+      Add an item
+    </Button>
     <!--这里绑定TodoListVM里的各个列表项-->
     <ItemsControl Items="{Binding Items}">
       <ItemsControl.ItemTemplate>
